--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/menu_item_new_crime"
         android:icon="@drawable/ic_menu_add"
-        android:title="New Crime"
+        android:title="@string/ok"
         app:showAsAction="ifRoom|withText"
         />
 </menu>
