1.修改列表布局 2.修改CrimeLab 不随机100个，添加addCrime 方法添加数据 3.添加onOptionsItemSelect()方法 4.利用switch case 当点击添加生成新的Item

--- a/app/src/main/res/layout/list_item_crime.xml
+++ b/app/src/main/res/layout/list_item_crime.xml
@@ -9,14 +9,14 @@
 
         <TextView
             android:id="@+id/list_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="title"
             android:layout_weight="8"
             />
         <CheckBox
             android:id="@+id/list_solve"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="solved"
             android:layout_weight="1"
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/list_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="title"
         android:layout_weight="8"
