1.添加 delete 菜单项 2. 删除所有数据 3. 刷新 视图

--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -12,4 +12,9 @@
         android:title="@string/show_subtitle"
         app:showAsAction="ifRoom"
         />
+    <item
+        android:id="@+id/menu_item_delete_crime"
+        android:title="Delete Crime"
+        app:showAsAction="ifRoom"
+        />
 </menu>
