--- a/app/src/main/res/layout/activity_crime_fragment.xml
+++ b/app/src/main/res/layout/activity_crime_fragment.xml
@@ -18,6 +18,7 @@
             android:orientation="vertical"
             >
             <ImageView
+                android:id="@+id/show_image"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@android:color/background_dark"
@@ -25,6 +26,7 @@
                 />
 
             <ImageButton
+                android:id="@+id/use_camera"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@android:drawable/ic_menu_camera"
