--- a/app/src/main/res/layout-land/activity_crime_fragment.xml
+++ b/app/src/main/res/layout-land/activity_crime_fragment.xml
@@ -2,46 +2,89 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.didiaoyuan.blog.recycleviewofcrime.CrimeFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:id="@+id/show_image"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@android:color/background_dark"
+                android:scaleType="centerInside"
+                />
+
+            <ImageButton
+                android:id="@+id/use_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_camera"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            >
+            <TextView
+                style="?android:listSeparatorTextViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TITLE"
+                />
+
+            <EditText
+                android:id="@+id/content_EditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/app_name"
+                />
+        </LinearLayout>
+    </LinearLayout>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         style="?android:listSeparatorTextViewStyle"
-        android:text="TITLE"
-        />
-    <EditText
-        android:id="@+id/content_EditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/app_name"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?android:listSeparatorTextViewStyle"
         android:text="DETALES"
         />
-    <LinearLayout
-        android:orientation="horizontal"
+
+    <Button
+        android:id="@+id/crime_date"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/crime_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_weight="8"
-                />
-            <CheckBox
-                android:id="@+id/crime_solve"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="solved"
-                android:layout_weight="1"
-                />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+
+        />
+
+    <CheckBox
+        android:id="@+id/crime_solve"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="solved"
+        />
+
+    <Button
+        android:id="@+id/choose_suspect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="选择联系人"
+        />
+
+    <Button
+        android:id="@+id/send_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="发送短消息的应用"
+        />
 </LinearLayout>
