--- a/app/src/main/res/layout-land/dialog_image.xml
+++ b/app/src/main/res/layout-land/dialog_image.xml
@@ -3,8 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
     <ImageView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/dialog_view"
         android:layout_width="800px"
         android:layout_height="800px"
